[metadata]
name = phxlib
version = 0.0.1
author = Jeff Valenti and JWST Telescope Scientist GTO Team
author_email = valenti@stsci.edu
description = Handle PHOENIX stellar atmospheres and synthetic spectra
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JeffValenti/phxlib
project_urls =
    Bug Tracker = https://github.com/JeffValenti/phxlib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: AURA
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
scripts =
    bin/jwtrex-test

[options.entry_points]
console_scripts =

[options.packages.find]
where = src
